--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -45,6 +45,12 @@
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakIdentifierCSD">
       </page>
       <page
+            name="Peak Identifier Template"
+            category="org.eclipse.chemclipse.chromatogram.wsd.identifier.ui.preferences.preferencePage"
+            class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakIdentifierWSD"
+            id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakIdentifierWSD">
+      </page>      
+      <page
             name="Peak Review Template"
             category="org.eclipse.chemclipse.chromatogram.msd.identifier.ui.preferences.identifierPreferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakReviewMSD"
