--- a/openchrom/plugins/net.openchrom.csd.converter.supplier.cdf.ui/build.properties
+++ b/openchrom/plugins/net.openchrom.csd.converter.supplier.cdf.ui/build.properties
@@ -13,4 +13,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
+               OSGI-INF/,\
+               plugin.xml
