--- a/openchrom/features/pom.xml
+++ b/openchrom/features/pom.xml
@@ -64,5 +64,6 @@
 		<module>net.openchrom.msd.converter.supplier.mz5.feature</module>
 		<module>net.openchrom.xxd.converter.supplier.gaml.feature</module>
 		<module>net.openchrom.nmr.converter.supplier.nmrml.feature</module>
+		<module>net.openchrom.msd.converter.supplier.mzmlb.feature</module>
 	</modules>
 </project>
