--- a/openchrom/plugins/pom.xml
+++ b/openchrom/plugins/pom.xml
@@ -96,5 +96,6 @@
 		<module>net.openchrom.xir.converter.supplier.gaml</module>
 		<module>net.openchrom.xxd.converter.supplier.gaml</module>
 		<module>net.openchrom.nmr.converter.supplier.nmrml</module>
+		<module>net.openchrom.msd.converter.supplier.mzmlb</module>
 	</modules>
 </project>
