--- a/openchrom/plugins/pom.xml
+++ b/openchrom/plugins/pom.xml
@@ -97,5 +97,6 @@
 		<module>net.openchrom.xxd.converter.supplier.gaml</module>
 		<module>net.openchrom.nmr.converter.supplier.nmrml</module>
 		<module>net.openchrom.msd.converter.supplier.mzmlb</module>
+		<module>net.openchrom.msd.converter.supplier.mzdb</module>
 	</modules>
 </project>
