The AnIML UI bundle has been added.

--- a/openchrom/plugins/pom.xml
+++ b/openchrom/plugins/pom.xml
@@ -100,5 +100,6 @@
 		<module>net.openchrom.msd.converter.supplier.mzdb</module>
 		<module>net.openchrom.csd.converter.supplier.animl</module>
 		<module>net.openchrom.xxd.converter.supplier.animl</module>
+		<module>net.openchrom.xxd.converter.supplier.animl.ui</module>
 	</modules>
 </project>
