--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,4 @@ jobs:
         java-package: 'jdk+fx'
         cache: 'maven'
     - name: Build with Maven
-      run: mvn -f openchrom/releng/net.openchrom.aggregator/pom.xml clean install --no-transfer-progress -U -DskipTests
+      run: mvn -f openchrom/releng/net.openchrom.aggregator/pom.xml install --batch-mode --no-transfer-progress
