--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
+    - name: Checkout ChemClipse
       uses: actions/checkout@v2
+      with:
+        path: chemclipse
+        repository: 'eclipse/chemclipse'
+    - name: Checkout OpenChrom
+      uses: actions/checkout@v2
+      with:
+        path: openchrom
     - name: Set up JDK 8
       uses: actions/setup-java@v2
       with:
@@ -31,4 +38,4 @@ jobs:
         java-package: 'jdk+fx'
         cache: 'maven'
     - name: Build with Maven
-      run: mvn -f openchrom/releng/net.openchrom.aggregator/pom.xml install --batch-mode --no-transfer-progress
+      run: cd openchrom && mvn -f openchrom/releng/net.openchrom.aggregator/pom.xml install --batch-mode --no-transfer-progress
