--- a/openchrom/plugins/net.openchrom.msd.converter.supplier.animl/plugin.xml
+++ b/openchrom/plugins/net.openchrom.msd.converter.supplier.animl/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.chemclipse.msd.converter.chromatogramSupplier">
       <ChromatogramSupplier
-            description="Reads Analytical Information Markup Language Chromatograms"
+            description="Reads and writes Analytical Information Markup Language Chromatograms"
             fileExtension=".animl"
             filterName="AnIML MSD Chromatogram (*.animl)"
             id="net.openchrom.msd.converter.supplier.animl.chromatogram"
@@ -14,5 +14,33 @@
             isExportable="true"
             isImportable="true">
       </ChromatogramSupplier>
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.msd.converter.massSpectrumSupplier">
+      <MassSpectrumSupplier
+            description="Reads and writes Analytical Information Markup Language Mass Spectra"
+            exportConverter="net.openchrom.msd.converter.supplier.animl.converter.MassSpectrumExportConverter"
+            fileExtension=".animl"
+            filterName="AnIML Mass Spectrum (*.animl)"
+            id="net.openchrom.msd.converter.supplier.animl.spectrum"
+            importConverter="net.openchrom.msd.converter.supplier.animl.converter.MassSpectrumImportConverter"
+            importMagicNumberMatcher="net.openchrom.msd.converter.supplier.animl.converter.MassSpectrumMagicNumberMatcher"
+            isExportable="true"
+            isImportable="true">
+      </MassSpectrumSupplier>
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.msd.converter.databaseSupplier">
+      <DatabaseSupplier
+            description="RReads and writes Analytical Information Markup Language Library Mass Spectra."
+            exportConverter="net.openchrom.msd.converter.supplier.animl.converter.DatabaseExportConverter"
+            fileExtension=".animl"
+            filterName="AnIML Mass Spectrum Library (*.animl)"
+            id="net.openchrom.msd.process.supplier.animl.spectrum.db"
+            importConverter="net.openchrom.msd.converter.supplier.animl.converter.DatabaseImportConverter"
+            importMagicNumberMatcher="net.openchrom.msd.converter.supplier.animl.converter.MassSpectrumMagicNumberMatcher"
+            isExportable="true"
+            isImportable="true">
+      </DatabaseSupplier>
    </extension>
 </plugin>
