--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -9,7 +9,7 @@
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.preferencePage">
       </page>         
       <page
-            name="Peak Detector Template"
+            name="Peak Detector UI [Template]"
             category="org.eclipse.chemclipse.chromatogram.msd.peak.detector.ui.preferences.peakDetectorPreferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakDetector"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakDetector">
@@ -49,13 +49,25 @@
             category="org.eclipse.chemclipse.chromatogram.wsd.identifier.ui.preferences.preferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakIdentifierWSD"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakIdentifierWSD">
-      </page>      
+      </page>
+      <page
+            name="Peak Review UI [Template]"
+            category="org.eclipse.chemclipse.chromatogram.msd.identifier.ui.preferences.identifierPreferencePage"
+            class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakReview"
+            id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakReview">
+      </page>           
       <page
             name="Peak Review Template"
             category="org.eclipse.chemclipse.chromatogram.msd.identifier.ui.preferences.identifierPreferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakReviewMSD"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakReviewMSD">
       </page>
+      <page
+            name="Peak Review UI [Template]"
+            category="org.eclipse.chemclipse.chromatogram.csd.identifier.ui.preferences.preferencePage"
+            class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakReview"
+            id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakReview">
+      </page>      
       <page
             name="Peak Review Template"
             category="org.eclipse.chemclipse.chromatogram.csd.identifier.ui.preferences.preferencePage"
