Document the Template Review UI controls.

--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/build.properties
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/build.properties
@@ -3,4 +3,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               plugin.xml
+               plugin.xml,\
+               controls.xml,\
+               html/
