--- a/openchrom/features/pom.xml
+++ b/openchrom/features/pom.xml
@@ -67,5 +67,6 @@
 		<module>net.openchrom.msd.converter.supplier.mzmlb.feature</module>
 		<module>net.openchrom.msd.converter.supplier.mzdb.feature</module>
 		<module>net.openchrom.xxd.converter.supplier.animl.feature</module>
+		<module>net.openchrom.xxd.report.supplier.csv.feature</module>
 	</modules>
 </project>
