--- a/openchrom/features/pom.xml
+++ b/openchrom/features/pom.xml
@@ -17,7 +17,7 @@
 	<description>
 	OpenChrom is an open source workbench to edit and modify chromatographic data.
   </description>
-	<url>https://github.com/OpenChrom/releng</url>
+	<url>https://github.com/OpenChrom/</url>
 	<!-- LICENSES -->
 	<licenses>
 		<license>
