--- a/openchrom/plugins/net.openchrom.xxd.converter.supplier.pdf/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.converter.supplier.pdf/plugin.xml
@@ -5,12 +5,12 @@
          point="org.eclipse.chemclipse.msd.converter.chromatogramSupplier">
       <ChromatogramSupplier
             description="Exports Chromatograms to PDF format."
-            exportConverter="net.openchrom.msd.converter.supplier.pdf.converter.ChromatogramExportConverter"
+            exportConverter="net.openchrom.xxd.converter.supplier.pdf.converter.ChromatogramExportConverter"
             fileExtension=".pdf"
             filterName="PDF Chromatogram (*.pdf)"
-            id="net.openchrom.msd.converter.supplier.pdf"
-            importConverter="net.openchrom.msd.converter.supplier.pdf.converter.ChromatogramImportConverter"
-            importMagicNumberMatcher="net.openchrom.msd.converter.supplier.pdf.converter.MagicNumberMatcher"
+            id="net.openchrom.xxd.converter.supplier.pdf"
+            importConverter="net.openchrom.xxd.converter.supplier.pdf.converter.ChromatogramImportConverter"
+            importMagicNumberMatcher="net.openchrom.xxd.converter.supplier.pdf.converter.MagicNumberMatcher"
             isExportable="true"
             isImportable="false">
       </ChromatogramSupplier>
@@ -18,7 +18,7 @@
    <extension
          point="org.eclipse.core.runtime.preferences">
       <initializer
-            class="net.openchrom.msd.converter.supplier.pdf.preferences.PreferenceInitializer">
+            class="net.openchrom.xxd.converter.supplier.pdf.preferences.PreferenceInitializer">
       </initializer>
    </extension>
 </plugin>
