Add a mass spectra hash (splash) converter.

--- a/openchrom/features/pom.xml
+++ b/openchrom/features/pom.xml
@@ -68,5 +68,6 @@
 		<module>net.openchrom.msd.converter.supplier.mzdb.feature</module>
 		<module>net.openchrom.xxd.converter.supplier.animl.feature</module>
 		<module>net.openchrom.xxd.report.supplier.csv.feature</module>
+		<module>net.openchrom.msd.converter.supplier.splash.feature</module>
 	</modules>
 </project>
