--- a/openchrom/releng/net.openchrom.aggregator/pom.xml
+++ b/openchrom/releng/net.openchrom.aggregator/pom.xml
@@ -16,7 +16,7 @@
   <description>
 	OpenChrom is an open source workbench to edit and modify chromatographic data.
   </description>
-  <url>https://github.com/OpenChrom/releng</url>
+  <url>https://github.com/OpenChrom/OpenChrom</url>
   <!--
 	LICENSES
   -->
