--- a/openchrom/plugins/net.openchrom.rcp.compilation.community.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.rcp.compilation.community.ui/plugin.xml
@@ -5,14 +5,14 @@
          point="org.eclipse.core.runtime.products">
       <product
             application="org.eclipse.chemclipse.rcp.app.ui.org.eclipse.chemclipse.rcp.application"
-            name="OpenChrom Analytics Edition (Lawrence)">
+            name="OpenChrom Analytics Edition (McLafferty)">
          <property
                name="windowImages"
                value="icons/logo_16x16.png,icons/logo_32x32.png,icons/logo_48x48.png,icons/logo_64x64.png,icons/logo_128x128.png">
          </property>
          <property
                name="aboutText"
-               value="OpenChrom Analytics Edition (Lawrence) - the open source software for chromatography and spectrometry">
+               value="OpenChrom Analytics Edition (McLafferty) - the open source software for chromatography and spectrometry">
          </property>
          <property
                name="aboutImage"
@@ -20,7 +20,7 @@
          </property>
          <property
                name="appName"
-               value="OpenChrom Analytics Edition (Lawrence)">
+               value="OpenChrom Analytics Edition (McLafferty)">
          </property>
          <property
                name="applicationXMI"
@@ -28,7 +28,7 @@
          </property>
          <property
                name="applicationCSS"
-               value="platform:/plugin/org.eclipse.chemclipse.rcp.app.ui/css/chemclipse.css">
+               value="/org.eclipse.chemclipse.rcp.app.ui/css/chemclipse.css">
          </property>
       </product>
    </extension>
