--- a/openchrom/plugins/net.openchrom.rcp.compilation.community.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.rcp.compilation.community.ui/plugin.xml
@@ -24,7 +24,7 @@
          </property>
          <property
                name="applicationXMI"
-               value="org.eclipse.chemclipse.rcp.app.ui/Application.e4xmi">
+               value="platform:/plugin/org.eclipse.chemclipse.rcp.app.ui/Application.e4xmi">
          </property>
          <property
                name="applicationCSS"
