--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
@@ -292,7 +292,7 @@
          point="org.eclipse.chemclipse.msd.converter.chromatogramSupplier">
       <ChromatogramSupplier
             description="Exports a list of named traces for overlay purposes."
-            exportConverter="net.openchrom.xxd.process.supplier.templates.chromatogram.ChromatogramExport"
+            exportConverter="net.openchrom.xxd.process.supplier.templates.chromatogram.ChromatogramExportNamedTraces"
             fileExtension=".txt"
             fileName="NamedTraces.txt"
             filterName="Named Traces (*.txt)"
@@ -301,5 +301,47 @@
             isExportable="true"
             isImportable="false">
       </ChromatogramSupplier>
-   </extension>      
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.csd.converter.chromatogramSupplier">
+      <ChromatogramSupplier
+            description="Exports the peak time ranges."
+            exportConverter="net.openchrom.xxd.process.supplier.templates.chromatogram.ChromatogramExportTimeRanges"
+            fileExtension=".txt"
+            fileName="TimeRanges.txt"
+            filterName="Time Ranges (*.txt)"
+            id="net.openchrom.xxd.process.supplier.templates.export.chromatogram.csd.timeranges"
+            importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.chromatogram.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.msd.converter.chromatogramSupplier">
+      <ChromatogramSupplier
+            description="Exports the peak time ranges."
+            exportConverter="net.openchrom.xxd.process.supplier.templates.chromatogram.ChromatogramExportTimeRanges"
+            fileExtension=".txt"
+            fileName="TimeRanges.txt"
+            filterName="Time Ranges (*.txt)"
+            id="net.openchrom.xxd.process.supplier.templates.export.chromatogram.msd.timeranges"
+            importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.chromatogram.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.wsd.converter.chromatogramSupplier">
+      <ChromatogramSupplier
+            description="Exports the peak time ranges."
+            exportConverter="net.openchrom.xxd.process.supplier.templates.chromatogram.ChromatogramExportTimeRanges"
+            fileExtension=".txt"
+            fileName="TimeRanges.txt"
+            filterName="Time Ranges (*.txt)"
+            id="net.openchrom.xxd.process.supplier.templates.export.chromatogram.wsd.timeranges"
+            importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.chromatogram.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>
+   </extension>
 </plugin>
