Fixed #268 - Time Ranges - file extension (*.tra)

--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
@@ -307,9 +307,9 @@
       <ChromatogramSupplier
             description="Exports the peak time ranges."
             exportConverter="net.openchrom.xxd.process.supplier.templates.chromatogram.ChromatogramExportTimeRanges"
-            fileExtension=".txt"
-            fileName="TimeRanges.txt"
-            filterName="Time Ranges (*.txt)"
+            fileExtension=".tra"
+            fileName="TimeRanges.tra"
+            filterName="Time Ranges (*.tra)"
             id="net.openchrom.xxd.process.supplier.templates.export.chromatogram.csd.timeranges"
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.chromatogram.MagicNumberMatcher"
             isExportable="true"
@@ -321,9 +321,9 @@
       <ChromatogramSupplier
             description="Exports the peak time ranges."
             exportConverter="net.openchrom.xxd.process.supplier.templates.chromatogram.ChromatogramExportTimeRanges"
-            fileExtension=".txt"
-            fileName="TimeRanges.txt"
-            filterName="Time Ranges (*.txt)"
+            fileExtension=".tra"
+            fileName="TimeRanges.tra"
+            filterName="Time Ranges (*.tra)"
             id="net.openchrom.xxd.process.supplier.templates.export.chromatogram.msd.timeranges"
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.chromatogram.MagicNumberMatcher"
             isExportable="true"
@@ -335,9 +335,9 @@
       <ChromatogramSupplier
             description="Exports the peak time ranges."
             exportConverter="net.openchrom.xxd.process.supplier.templates.chromatogram.ChromatogramExportTimeRanges"
-            fileExtension=".txt"
-            fileName="TimeRanges.txt"
-            filterName="Time Ranges (*.txt)"
+            fileExtension=".tra"
+            fileName="TimeRanges.tra"
+            filterName="Time Ranges (*.tra)"
             id="net.openchrom.xxd.process.supplier.templates.export.chromatogram.wsd.timeranges"
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.chromatogram.MagicNumberMatcher"
             isExportable="true"
