Replace pural form (s)
See:
https://github.com/eclipse/chemclipse/issues/1058

--- a/openchrom/plugins/net.openchrom.chromatogram.msd.identifier.supplier.cdk/plugin.xml
+++ b/openchrom/plugins/net.openchrom.chromatogram.msd.identifier.supplier.cdk/plugin.xml
@@ -18,7 +18,7 @@
             identifierSettings="net.openchrom.chromatogram.msd.identifier.supplier.cdk.settings.IdentifierSettings">
       </ChromatogramIdentificationSupplier>
       <ChromatogramIdentificationSupplier
-            description="This files cleans empty SMILES target(s)."
+            description="This files cleans empty SMILES targets."
             id="net.openchrom.chromatogram.msd.identifier.supplier.cdk.cleaner"
             identifier="net.openchrom.chromatogram.msd.identifier.supplier.cdk.core.ChromatogramCleaner"
             identifierName="SMILES Target Cleaner"
